--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "typescript": "~4.3.5"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "17.0.21",
+    "@types/react-dom": "17.0.2"
   },
   "private": true
 }
