--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-calendars": "^1.1282.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.3.2",
