--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "backgroundColor": "#1B1B1F"
-    }
+    },
+    "jsEngine": "hermes"
   }
 }
