Configuração do banco no android && Estrutura da base de dados

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-      "strict": false
+      "strict": false,
+      "experimentalDecorators": true,
   },
   "extends": "expo/tsconfig.base"
 }
